--- a/shared/sources/inviteflood/inviteflood-master/inviteflood/Makefile
+++ b/shared/sources/inviteflood/inviteflood-master/inviteflood/Makefile
@@ -1,5 +1,5 @@
 inviteflood: inviteflood.c inviteflood.h
-	gcc -I../hack_library inviteflood.c -lnet ../hack_library/hack_library.o -o inviteflood
+	gcc -I../hack_library -no-pie inviteflood.c -lnet ../hack_library/hack_library.o -o inviteflood
 
 clean:
 	rm -f inviteflood inviteflood.o
